--- a/views/calculator.html
+++ b/views/calculator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Basic HTML</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/calculator.css">
 </head>
 <body>
 <div id="first">
@@ -18,7 +18,7 @@
 </div>
 <button onclick="addme()">add me</button>
 
-	<script type="text/javascript" src="js/index.js">
+	<script type="text/javascript" src="js/calculator.js">
 
 	</script>
 </body>
