--- a/views/about.html
+++ b/views/about.html
@@ -7,6 +7,7 @@
   <body>
   	<h1>Another Page</h1>
   	<a href="/">Home</a> |
-	<a href="/about">About</a> 
+  <a href="/about">About</a> 
+	<a href="/calculator">Calculator</a> 
   </body>
   </html>
