--- a/views/calculator.html
+++ b/views/calculator.html
@@ -5,16 +5,16 @@
 	<link rel="stylesheet" type="text/css" href="css/calculator.css">
 </head>
 <body>
-<div id="first">
+<div Id="first">
 	Enter first number:
-	<input type="text" id="fn" />
+	<input type="text" Id="fn" />
 </div>
-<div id="second">
+<div Id="second">
 	Enter second number:
-	<input type="text" id="sn" />
+	<input type="text" Id="sn" />
 </div>
 <div>
-	Sum is <span id="answer">0</span>
+	Sum is <span Id="answer">0</span>
 </div>
 <button onclick="addme()">add me</button>
 
